<resources>
    <string name="app_name">FinalProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create new account</string>
    <string name="dont">Don\'t  have an account yet?</string>
    <string name="log">Log in</string>
    <string name="pass">Password</string>
    <string name="mail">E-mail</string>
    <string name="error">Error!!</string>
    <string name="quiz">Quiz</string>
    <string name="out">Log out</string>
    <string name="error2">You don\'t seem to have any connection to the internet</string>
</resources>
